test/langtools/tools/javac/localmethods/finder/CallInFieldInit.out
CallInFieldInit.java:16:17: compiler.warn.method.could.be.declared.local: foo(), kindname.class, CallInFieldInit
- compiler.err.warnings.and.werror
1 error
1 warning
